--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "ethereum-cryptography": "^1.2.0",
     "ethereumjs-abi": "^0.6.8",
     "ethereumjs-util": "^6.2.1",
+    "ethers-provider": "^1.0.1",
+    "ethers-react": "^1.1.0",
     "ethjs-util": "^0.1.6",
     "evp_bytestokey": "^1.0.3",
     "fill-range": "^7.0.1",
@@ -126,8 +128,8 @@
     "locate-path": "^2.0.0",
     "lodash": "^4.17.21",
     "log-symbols": "^4.1.0",
-    "lru-cache": "^5.1.1",
     "lru_map": "^0.3.3",
+    "lru-cache": "^5.1.1",
     "mcl-wasm": "^0.7.9",
     "md5.js": "^1.3.5",
     "memory-level": "^1.0.0",
@@ -183,8 +185,8 @@
     "stacktrace-parser": "^0.1.10",
     "statuses": "^2.0.1",
     "streamsearch": "^1.1.0",
-    "string-width": "^4.2.3",
     "string_decoder": "^1.3.0",
+    "string-width": "^4.2.3",
     "strip-ansi": "^6.0.1",
     "strip-hex-prefix": "^1.0.0",
     "strip-json-comments": "^3.1.1",
